# infra

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Manifest.toml  Project.toml  README.md  build.zig  main.zig  pnpm-workspace.yaml
AI/ml/: Manifest.toml  Project.toml
AI/ml/src/: ml.jl
apps/cross/liner/: README.md
apps/cross/liner/core/: Cargo.toml  README.md
apps/cross/liner/core-wasm/: Cargo.toml
apps/cross/liner/desktop/: Cargo.toml
apps/cross/liner/desktop/src/: lib.rs  main.rs
apps/cross/liner/tui/: Cargo.toml
apps/cross/liner/website/: package.json
apps/cross/liner/website/src/pages/: index.astro
apps/deepl/audio_translator/: Cargo.toml
apps/deepl/audio_translator/src/: main.rs
apps/web_only/deepl-design/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web_only/deepl-design/src/: App.tsx  index.css  index.tsx  main.tsx
apps/web_only/deepl-design/src/components/: Home.tsx
apps/web_only/deepl-design/src/states/: record.ts
core/: Cargo.toml
cpp/: .clang-tidy  deepl.main.cc  deepl.test.cc  deps.zig
cpp/include/: infra_core.hpp  medical.lab7.h
cpp/proto/apps/apps-service/todo/: todo.pb.cc  todo.pb.h
cpp/src/: deepl.main.cc  infra_core.cc  infra_core.cpp  infra_core.hpp  medical.lab7.cc  medical.lab8.cc
cpp/src/deepl/: lab1.cc  lab1.hpp
cpp/tests/: deepl.test.cc  medical.lab7.test.cc
proto/: compile.zig
proto/apps/apps-service/todo/: todo.proto
service/apps-service/api/database/: Cargo.toml  build.rs
service/apps-service/api/database/src/: lib.rs  main.rs
service/apps-service/api/database/src/todo/: mod.rs
service/apps-service/api/graphql/: Cargo.toml
service/apps-service/api/graphql/src/: lib.rs  main.rs
service/apps-service/api/graphql/src/api/: mod.rs
service/apps-service/api/graphql/src/schema/: mod.rs
service/apps-service/api/graphql/src/schema/todo/: mod.rs  todo_mutation.rs  todo_query.rs
sql/service/apps-service/api/: todo.sql
src/: ml.jl
utils/: Cargo.toml
utils/src/: lib.rs  trace.rs
utils/src/ssl/: mod.rs
zig/: compile.zig  infra.zig  main.zig
zig/util/: util.zig
