[package]
name = "infra_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-appender = "0.2"
futures-util = "0.3"
rustls = "0.20"
rustls-pemfile = "1"
anyhow = "1"
regex = "1.5"
rayon = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.18.2", features = ["full"] }
