[package]
name = "liner"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = [
  "tokio",
  "image",
  "canvas",
  "svg",
  "debug",
] }
chrono = "0.4"
regex = "1.5"
rayon = "1.5"
futures = "0.3"
futures-util = "0.3"
anyhow = "1"
url = "2"
clap = "3"
uuid = "1"
oauth2 = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
tracing-futures = "0.2"
tracing-appender = "0.2"
tracing-attributes = "0.1"
serde = "1"
serde_json = "1"
tonic = "0.7"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "gzip",
  "cookies",
  "rustls-tls",
  "multipart",
  "stream",
  "socks",
  "trust-dns",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
