[package]
name = "database"
version = "0.0.1"
edition = "2021"

[dependencies]
tonic = { version = "0.7", features = ["compression", "tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-appender = "0.2"
futures-util = "0.3"
postgres-types = "0.2"
rustls = "0.20"
rustls-pemfile = "1"
prost = "0.10"
prost-types = "0.10"
async-stream = "0.3"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "json",
  "macros",
  "chrono",
  "uuid",
  "postgres",
] }
async-graphql = "3"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost", "compression"] }
tokio = { version = "1", features = ["full"] }
