[package]
name = "database"
version = "0.0.1"
edition = "2021"

[dependencies]
tonic = { version = "0.7", features = ["compression", "tls"] }
tokio = { version = "1.18.2", features = ["full"] }
serde_json = "1"
serde = "1"
postgres-types = "0.2"
prost = "0.10"
prost-types = "0.10"
async-stream = "0.3"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "json",
  "macros",
  "chrono",
  "uuid",
  "postgres",
] }
async-graphql = "4"
infra_utils = { path = "../../../../utils" }

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost", "compression"] }
infra_utils = { path = "../../../../utils" }
