[package]
name = "graphql"
version = "0.0.1"
authors = ["bowen@lqxclqxc@outlook.com"]
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-cors = "0.6"
serde_json = "1"
serde = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rayon = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
tracing-futures = "0.2"
tracing-appender = "0.2"
tracing-attributes = "0.1"
rustls = "0.20"
rustls-pemfile = "1"
async-graphql = "3"
async-graphql-actix-web = "3"
database = { path = "../database/" }
tonic = { version = "0.7", features = ["compression", "tls"] }
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "json",
  "macros",
  "chrono",
  "uuid",
  "postgres",
] }
chrono = { version = "0.4", features = ["serde"] }
