[package]
name = "graphql"
version = "0.0.1"
authors = ["bowen@lqxclqxc@outlook.com"]
edition = "2021"

[dependencies]
infra_utils = {path = "../../../../utils"}
actix = "0.13"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-cors = "0.6"
async-graphql = "4"
async-graphql-actix-web = "4"
database = { path = "../database/" }
tonic = { version = "0.7", features = ["compression", "tls"] }
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "json",
  "macros",
  "chrono",
  "uuid",
  "postgres",
] }
serde_json = "1"
serde = "1"

